# Finance-God

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  findings.md  progress.md  task_plan.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  main.py  mypy.ini  pyproject.toml  requirements.txt  server.py
backend/alembic/: env.py
backend/alembic/versions/: 20260723_0001_initial_schema.py  20260723_0001_simulation_ledger.py  20260724_0002_current_question.py  20260724_0002_workflow_runtime.py  20260724_0003_auto_profile.py  20260724_0003_simulation_execution.py  20260724_0004_question_history.py  20260724_0004_workspace_services.py  20260724_0008_direction_selected_unique.py  20260724_0009_merge_question_history.py  20260724_0010_investment_mandate.py  20260724_0011_candidate_ignores.py  20260724_0012_trade_plans.py  20260724_0013_evidence_bundles.py
backend/app/: ai_catalog.py  config.py  dependencies.py  env_migration.py  main.py  startup.py
backend/app/agents/: base.py  market_agent.py  risk_agent.py  strategy_portfolio_agent.py  user_state_agent.py
backend/app/core/: __init__.py  audit.py  cache.py  events.py  exceptions.py  pagination.py  (+3 more)
backend/docs/: architecture-overview.md  finance-api-reference.md  workbench-integration.md
backend/finance_god/: __init__.py
backend/scripts/: build_pandadata_capability_artifacts.py  reset_dev_db.sh  run_workflow_experiments.py  seed_dev_admin.py  seed_dev_ai_config.py
backend/tests/: conftest.py  test_multi_agent.py  test_workflows.py
(+455 files in other folders)
