[project]
name = "finance-god-backend"
version = "0.1.0"
description = "Finance-God AI Investment Advisor - Hackathon MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "python-multipart>=0.0.9",
    "cachetools>=5.3.0",
    "httpx[socks]>=0.27.0",
    "apscheduler>=3.10.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "openai>=2.0.0,<3",
    "langchain>=0.1.0",
    "langgraph>=1.0.0,<2",
    "mcp>=1.27.0,<2",
    "panda_data>=0.0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "finance_god*"]
